tools/tests/ui/fail/l1025.cnf
// Test file for error code: L1025
// Expected error: Invalid TEXT-UTF8 character in instruction sequence -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
